crates/tree-sitter-otui/test/corpus/block_scalars.txt
================================================================================
block scalar chomping markers
================================================================================

a: |
  keep one
b: |-
  strip trailing
c: |+
  keep all

--------------------------------------------------------------------------------

(document
  (property
    key: (property_key)
    value: (block_scalar
      marker: (block_scalar_marker)
      (block_scalar_content)))
  (property
    key: (property_key)
    value: (block_scalar
      marker: (block_scalar_marker)
      (block_scalar_content)))
  (property
    key: (property_key)
    value: (block_scalar
      marker: (block_scalar_marker)
      (block_scalar_content))))
