crates/tree-sitter-otui/test/corpus/lists.txt
================================================================================
list items
================================================================================

- first
- second
- third

--------------------------------------------------------------------------------

(document
  (list_item
    value: (identifier))
  (list_item
    value: (identifier))
  (list_item
    value: (identifier)))
