crates/tree-sitter-otui/test/corpus/properties.txt
================================================================================
url value is not split at its internal colon
================================================================================

Widget
  image-source: http://example.com/x.png

--------------------------------------------------------------------------------

(document
  (container
    tag: (tag)
    (property
      key: (property_key)
      value: (plain_value))))

================================================================================
an unquoted multi-word value is a single plain value
================================================================================

Widget
  text: Hello World

--------------------------------------------------------------------------------

(document
  (container
    tag: (tag)
    (property
      key: (property_key)
      value: (plain_value))))

================================================================================
key with no value
================================================================================

Widget
  focusable:

--------------------------------------------------------------------------------

(document
  (container
    tag: (tag)
    (property
      key: (property_key))))
